--- a/Belogorsk_(Amuran_agj).mw
+++ b/Belogorsk_(Amuran_agj).mw
@@ -5,10 +5,10 @@
  | Lidnanznam text = Belogorskan lidnanznam (Amuran agj)
  | Flag text = Belogorskan flag (Amuran agj)
  | Valdkund = Venäma
- | Eläjiden lugu = 66,917
- | Voz' = 2017
+ | Eläjiden lugu = 64,502
+ | Voz' = 2021
  | Pind = 
- | Fail = Belogorsk station.jpg
+ | Fail = Площадь 30-летия Победы.jpg
  | Pämez' = Stanislav Melükov<br />(reduku 2008—)
  | Telefonkod = +7-41641-xx-xxx
  | Avtokod = 28
@@ -28,9 +28,17 @@ Lidn sijadase Tom'-jogen hural randal ({{lang-ru|Томь}}, [[Zei (jogi)|Zejan]
 Nizinnoje-žilo (472 rist. vl 2017) mülüb lidnümbrikho Belogorskan ližaks. Lidnümbrikon pind — 117,6 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 68 249 ristitud, lidnümbrikon — 68 716 ristitud. Kaikiš suremb lidnan ristitišt oli 75 tuhad eläjid vl 1992. Vl 2017 kaik 66 917 ristitud elihe lidnümbrikos. Om kaht [[ortodoksine hristanuskond|ortodoksižen hristanuskondan]] pühäpertid.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 68 249 ristitud, lidnümbrikon — 68 716 ristitud. Kaikiš suremb lidnan ristitišt oli 75 tuhad eläjid vl 1992. Vl 2017 kaik 66 445 ristitud elihe lidnas i 66 917 ristitud kaikes lidnümbrikos. Om kaht [[ortodoksine hristanuskond|ortodoksižen hristanuskondan]] pühäpertid.
 
 Professionaližen opendusen aluzkundad oma sijaline Amuran profkvalifikacijoiden äifunkcionaline keskuz<ref>[http://pksl28.ru/ Amuran profkvalifikacijoiden äifunkcionaližen keskusen sait (''pksl28.ru'').] {{ref-ru}}</ref> i Amuran torguindan da servisan kolledžan 4. palakund (Blagoveščensk, vspäi 2013, enzne Belogorskan sömtegimišton tehnologine tehnikum).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Belogorsk Victory Day Parade (2019) 05.jpg|Lidnan keskuzline torg (2019)
+Памятник В.И. Ленину (Консервный завод г. Белогорск).jpg|Konservtegimen skver (2016)
+Лето, жара.jpg|Fontan Vägestusen 30. voz'päivän torgul (2020)
+Belogorsk station.jpg|Belogorsk-päraudtestancijan sauvuz vl 2012
+</gallery>
 
 == Homaičendad ==
 <references/>
