--- a/Svobodnii_(Amuran_agj).mw
+++ b/Svobodnii_(Amuran_agj).mw
@@ -5,10 +5,10 @@
  | Lidnanznam text = Svobodnijan lidnanznam (Amuran agj)
  | Flag text = Svobodnijan flag (Amuran agj)
  | Valdkund = Venäma
- | Eläjiden lugu = 53,678
- | Voz' = 2018
+ | Eläjiden lugu = 52,918
+ | Voz' = 2021
  | Pind = 225
- | Fail = Railway station in Svobodny.jpg
+ | Fail = 
  | Pämez' = Jurii Romanov<br />(sulaku 2017—)
  | Telefonkod = +7-41643-xx-xxx
  | Avtokod = 28
@@ -18,7 +18,9 @@
 '''Svobodnii''' ({{lang-ru|Свободный}}) om [[Venäma]]n lidn da lidnümbrik [[Amuran agj]]an keskuzpalan suves. Se om agjan koumanz' lidn eläjiden lugun mödhe, [[Svobodnijan rajon]]an administrativižeks keskuseks, ei mülü rajonha.
 
 == Istorii ==
-Eländpunktan aluz om pandud vl 1912 kuti ''Aleksejevsk'' lidnan statusanke Aleksei-carinpoigan oiktastuseks. Vl 1917 sulakul nimitihe lidnad nügüdläižikš. Svobodnii šingotase raudten, sauvondmaterialiden (raudbetontegesed, keramine savič) i sömtegimišton edheotandoil. Kaikiš järedamb om vagonoiden kohenduztegim, se om üks'jäine Baikalaspäi Edahaižes Päivnouzmpoles. Vspäi 2015 Amuran londuseližen gazan ümbriradai tegim om sauvomas 15 kilometras lidnaspäi.
+Eländpunktan aluz om pandud vl 1912 kuti ''Aleksejevsk'' lidnan statusanke Aleksei-carinpoigan oiktastuseks. Vl 1917 sulakul nimitihe lidnad nügüdläižikš.
+
+Svobodnii šingotase raudten, sauvondmaterialiden (raudbetontegesed, keramine savič) i sömtegimišton edheotandoil. Kaikiš järedamb om vagonoiden kohenduztegim, se om üks'jäine Baikalaspäi Edahaižes Päivnouzmpoles. Vspäi 2015 Amuran londuseližen gazan ümbriradai tegim om sauvomas 15 kilometras lidnaspäi.
 
 == Geografijan andmused ==
 Lidn sijadase [[Zejanjogi|Zei-jogen]] ([[Amuranjogi|Amuran]] hura ližajogi) oiktal randal, 190 m ü.m.t. keskmäižel korktusel. Matkad [[Blagoveščensk (Amuran agj)|Blagoveščenskhasai]] om 146 km suvhe avtotedme. Lähembaižed lidnad oma [[Belogorsk (Amuran agj)|Belogorsk]] 56 suvhe orhal vai raudtedme i [[Šimanovsk]] 60 km lodeheze raudtedme.
@@ -26,9 +28,21 @@ Lidn sijadase [[Zejanjogi|Zei-jogen]] ([[Amuranjogi|Amuran]] hura ližajogi) oik
 Svobodnii om lidnümbrikon üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 58 778 ristitud. Kaikiš suremb ristitišt oli vl 1992 — 81 300 eläjad, se oli agjan kahtenz' lidn eläjiden lugun mödhe.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 58 778 ristitud. Kaikiš suremb ristitišt oli 81 300 eläjad vl 1992, se oli agjan kahtenz' lidn eläjiden lugun mödhe.
 
-Professionaližen opendusen aluzkundad: Amuran tehnine kolledž i Amuran raudtetransportan institut — Edahaižen Päivnouzmpolen raudteühtenzoitusen valdkundaližen universitetan filial, medicinine škol i raudtetehnikum mülüdas institutha.
+Professionaližen opendusen aluzkundad: Amuran tehnine kolledž i Amuran raudtetransportan institut<ref>[http://www.amijt.ru/ Amuran raudtetransportan institutan sait (''amijt.ru'').] {{ref-ru}}</ref> — Edahaižen Päivnouzmpolen raudteühtenzoitusen valdkundaližen universitetan filial, medicinine škol i raudtetehnikum mülüdas institutha.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Администрация г.Свободный.jpg|Lidnümbrikon administracijan sauvuz (2012)
+Амурский ГПЗ в ходе строительства.jpg|Amuran londuseližen gazan ümbriradajan tegimen sauvomine vl 2019
+Amizht.jpg|Amuran raudtetransportan institut vl 2012
+Hotel Zeya in Svobodny.jpg|«Zei»-adivpert' (2012)
+Railway station in Svobodny.jpg|Svobodnii-päraudtestancijan sauvuz vl 2012
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://www.svobnews.amur.ru/ Municipaližen «Svobodnii-lidn»-ühtnikan tobmuden aluzkundoiden oficialine informacine sait (''svobnews.amur.ru'').] {{ref-ru}}
