--- a/Svobodnii_(Amuran_agj).mw
+++ b/Svobodnii_(Amuran_agj).mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 52,918
  | Voz' = 2021
  | Pind = 225
- | Fail = 
+ | Fail = Tax inspection office in Svobodny.jpg
  | Pämez' = Jurii Romanov<br />(sulaku 2017—)
  | Telefonkod = +7-41643-xx-xxx
  | Avtokod = 28
