--- a/Svobodnii_(Amuran_agj).mw
+++ b/Svobodnii_(Amuran_agj).mw
@@ -9,7 +9,7 @@
  | Voz' = 2021
  | Pind = 225
  | Fail = Tax inspection office in Svobodny.jpg
- | Pämez' = Jurii Romanov<br />(sulaku 2017—)
+ | Pämez' = Vladimir Konstantinov<br />(eloku 2018—)
  | Telefonkod = +7-41643-xx-xxx
  | Avtokod = 28
  | Aigvö = [[UTC]]+9 (MSK+6)
@@ -32,6 +32,8 @@ Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 58 778 ristitud. K
 
 Professionaližen opendusen aluzkundad: Amuran tehnine kolledž i Amuran raudtetransportan institut<ref>[http://www.amijt.ru/ Amuran raudtetransportan institutan sait (''amijt.ru'').] {{ref-ru}}</ref> — Edahaižen Päivnouzmpolen raudteühtenzoitusen valdkundaližen universitetan filial, medicinine škol i raudtetehnikum mülüdas institutha.
 
+Edeline lidnan pämez' om Jurii Romanov (sulaku 2017 — eloku 2018).
+
 == Galerei ==
 <gallery mode="packed" heights="125px">
 Администрация г.Свободный.jpg|Lidnümbrikon administracijan sauvuz (2012)
@@ -45,7 +47,7 @@ Railway station in Svobodny.jpg|Svobodnii-päraudtestancijan sauvuz vl 2012
 <references />
 
 == Irdkosketused ==
-* [http://www.svobnews.amur.ru/ Municipaližen «Svobodnii-lidn»-ühtnikan tobmuden aluzkundoiden oficialine informacine sait (''svobnews.amur.ru'').] {{ref-ru}}
+* [http://svob.amurobl.ru/ Municipaližen «Svobodnii-lidn»-ühtnikan tobmuden aluzkundoiden oficialine informacine sait (''svob.amurobl.ru'').] {{ref-ru}} i sen [http://www.svobnews.amur.ru/ vanh versii (''svobnews.amur.ru'')].
 {{Commons|Category:Svobodny, Amur Oblast}}
 
 {{Amuran agjan lidnad}}
