/* Administrativiž-territorialine jagand */

--- a/Venäma.mw
+++ b/Venäma.mw
@@ -90,7 +90,7 @@ Käskuzkundaližen tobmuden pä om Venälaižen Federacijan Ülembaine käskuzku
 Kaik 83 regionad mülüdas Venälaižhe Federacijha ([[Krim (Venäman region)|Kriman]] kahten regionan lugemata):
 * 21 tazovaldkundad
 * 46 agjad
-* 9 randad
+* 9 [[Venälaižen Federacijan randad|randad]]
 * 4 ümbrikod
 * 2 federativižen alištusen lidnad
 * 1 avtonomine agj
