/* Administrativiž-territorialine jagand */

--- a/Venäma.mw
+++ b/Venäma.mw
@@ -88,7 +88,7 @@ Käskuzkundaližen tobmuden pä om Venälaižen Federacijan Ülembaine käskuzku
 &nbsp;&nbsp;&nbsp;''Kacu kirjutuz: [[Venäman administrativiž-territorialine jagand]].''
 
 Kaik 83 regionad mülüdas Venälaižhe Federacijha ([[Krim (Venäman region)|Kriman]] kahten regionan lugemata):
-* 21 tazovaldkundad
+* 21 [[Venäman Tazovaldkundad|tazovaldkundad]]
 * 46 agjad
 * 9 [[Venälaižen Federacijan randad|randad]]
 * 4 ümbrikod
