/* Administrativiž-territorialine jagand */

--- a/Venäma.mw
+++ b/Venäma.mw
@@ -85,7 +85,7 @@ Nügüdläine [[Venäman kaičendministruz|kaičendministr]] om [[Šoigu Sergei|
 Käskuzkundaližen tobmuden pä om Venälaižen Federacijan Ülembaine käskuzkund ({{lang-ru|Верховный суд}}), sen pertišt sijadase Moskvan keskuzpalas.
 
 == Administrativiž-territorialine jagand ==
-&nbsp;&nbsp;&nbsp;''Kacu kirjutuz: [[Venäman administrativiž-territorialine jagand]].''
+&nbsp;&nbsp;&nbsp;''Kacu kirjutuz: [[Venäman administrativiž-territorialine jagand]]'', ''[[Venälaižen Federacijan subjektad]]''.
 
 Kaik 83 regionad mülüdas Venälaižhe Federacijha ([[Krim (Venäman region)|Kriman]] kahten regionan lugemata):
 * 21 [[Venäman Tazovaldkundad|tazovaldkundad]]
