--- a/Venälaižen_Federacijan_randad.mw
+++ b/Venälaižen_Federacijan_randad.mw
@@ -1,17 +1,26 @@
 '''Rand''' ({{lang-ru|край}}) om [[Venäma]]n ezmäižen (ülembaižen) tazopindan üks' administrativižiš ühtnikoišpäi.
 
 Venälaižes Federacijas kaik om ühesa randad. Nimittušt erinendad [[Venäman agjad|agjoidenke]] ei ole ni ühthižes Konstitucijas, ni käskusištos, nimitused «rand»-sananke sünduiba istorižikš, no randoiden municipaline jagand mülütab ühtnikoid eriliženke statusanke — enččid avtonomižid agjoid.
+[[Fail:Krais of Russia.png]]
 
-[[Fail:Krais of Russia.png|left|350px]]
 '''Venäman randad da niiden pälidnad''':
+
 1. [[Altajan rand]] ([[Barnaul]])
+
 2. [[Kamčatkan rand]] ([[Petropavlovsk Kamčatkal]]) — om sätud vn 2007 heinkun 1. päiväl
+
 3. [[Habarovskan rand]] ([[Habarovsk]])
+
 4. [[Krasnodaran rand]] ([[Krasnodar]])
+
 5. [[Krasnojarskan rand]] ([[Krasnojarsk]]) — röunad oma vajehtadud vn 2007 vilukun 1. päiväl ühtištusen jäl'ghe Taimiran i Evenkijan avtonomižidenke ümbrikoidenke
+
 6. [[Permin rand]] ([[Perm']]) — om sätud vn 2005 tal'vkun 1. päiväl
+
 7. [[Merenrandaline rand]] ([[Vladivostok]])
+
 8. [[Stavropolin rand]] ([[Stavropol']])
+
 9. [[Baikalantagaine rand]] ([[Čit]]) — om sätud vn 2008 keväz'kun 1. päiväl
 
 [[Kategorii:Venäma]]
