--- a/Venälaižen_Federacijan_randad.mw
+++ b/Venälaižen_Federacijan_randad.mw
@@ -23,4 +23,9 @@ Venälaižes Federacijas kaik om ühesa randad. Nimittušt erinendad [[Venäman 
 
 9. [[Baikalantagaine rand]] ([[Čit]]) — om sätud vn 2008 keväz'kun 1. päiväl
 
+== Homaičendad ==
+<references />
+
+{{Commons|Category:Krais of Russia}}
+
 [[Kategorii:Venäma]]
