--- a/Ciolkovskii_(lidn).mw
+++ b/Ciolkovskii_(lidn).mw
@@ -5,9 +5,9 @@
  | Lidnanznam text = Ciolkovskijan lidnanznam
  | Flag text = 
  | Valdkund = Venäma
- | Eläjiden lugu = 6,535
- | Voz' = 2018
- | Pind = 63.3
+ | Eläjiden lugu = 7,193
+ | Voz' = 2021
+ | Pind = 60.6
  | Fail = Tsiolkovsky-cosmodrome-vostochny-july-2015-amur-oblast.jpg
  | Pämez' = Sergei Levickii<br />(kül'mku 2018—)
  | Telefonkod = +7-41643-xx-xxx
@@ -15,26 +15,38 @@
  | Aigvö = [[UTC]]+9 (MSK+6)
 }}
 {{Znamoičendad|Ciolkovskii}}
-'''Ciolkovskii''' ({{lang-ru|Циолковский}}) om [[Venäma]]n lidn da lidnümbrik, sauptud administrativiž-territorialine ühtnik [[Amuran agj]]an keskuzpalan suves.
+'''Ciolkovskii''' ({{lang-ru|Циолковский}}) om [[Venäma]]n lidn da lidnümbrik, [[sauptud administrativiž-territorialine ühtnik]] [[Amuran agj]]an keskuzpalan suves.
 
 == Istorii ==
-Eländpunktan aluz om pandud vl 1969 kuti ''Uglegorsk-žilo''. Vhesai 1994 sen toine nimi oli ''Svobodnii-18''. Žilo sai lidnan statusad vl 2015, udesnimitihe siloi-žo, [[Ciolkovskii Konstantin|Konstantin Ciolkovskii]]-tedomehen kanzannimen mödhe.
+Eländpunktan aluz om pandud vl 1969 kuti ''Uglegorsk-žilo'', no raketdivizijan kaivuded oliba siš, ei olend hilen samišt. Vhesai 1994 sen toine nimi oli ''Svobodnii-18''. Žilo sai lidnan statusad vl 2015, udesnimitihe siloi-žo, [[Ciolkovskii Konstantin|Konstantin Ciolkovskii]]-tedomehen kanzannimen mödhe.
 
-Lidnan eläjiden enzne radsija — [[Svobodnii (kosmodrom)|Svobodnii-kosmodrom]] — om sauptud vanhtunuden infrastrukturan tagut vl 2007. [[Päivnouzmaine (kosmodrom)|Päivnouzmaine-kosmodrom]] om sauvomižes vajehtamha sidä.
+Lidnan eläjiden enzne radsija — [[Svobodnii (kosmodrom)|Svobodnii-kosmodrom]] — om sauptud vanhtunuden infrastrukturan tagut vl 2007. [[Päivnouzmaine (kosmodrom)|Päivnouzmaine-kosmodrom]] om sauvomižes vajehtamha sidä, mugažo kut 30-kilometrine raudte sennoks.
 
 == Geografijan andmused ==
-Lidn seižub Sur' Pör-jogen randal ({{lang-ru|Большая Пёра}}, [[Zei (jogi)|Zejan]] oiged ližajogi). Matkad [[Blagoveščensk (Amuran agj)|Blagoveščensk]]hasai om 180 km suvhe, [[Kitai]]n röunhasai — 110 km päivlaskmha. Jäine-raudtestancii ({{lang-ru|Ледяная}}) sijadase 5 kilometras lidnan keskusespäi.
+Lidn seižub Sur' Pör-jogen randal ({{lang-ru|Большая Пёра}}, [[Zei (jogi)|Zejan]] oiged ližajogi). Matkad [[Blagoveščensk (Amuran agj)|Blagoveščensk]]hasai om 180 km suvhe, [[Kitai]]n röunhasai — 110 km päivlaskmha. Jäine-raudtestancii ({{lang-ru|Ледяная}}) sijadase Transsibal vides kilometras lidnan keskusespäi.
 
 Klimat om terav kontinentaline, mussonižen tundusidenke. Voden keskmäine lämuz om −1,5 C°.
 
+SATÜ:n pind om 1181,65 km².
+
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 5 892 ristitud. Lidnan tobj pala om sauvomas, 2018. vodele projektiruidas 25 tuhad eläjid. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] pühäpert' om olmas lidnas.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 5 892 ristitud. Lidnan tobj pala om sauvomas, 2018. vodele projektiruihe 25 tuhad eläjid.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] pühäpert' om olmas lidnas.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Бюст Ю.А. Гагарина.jpg|Muštnik [[Jurii Gagarin]]an oiktastuseks (2018)
+Храм в честь Казанской иконы Божией Матери, г. Циолковский.jpg|Jumalanmaman Kazanin jumalaižen pühäpert', vn 2019 nägu
+Детский сад в микрорайоне "Звездный".jpg|Päivkodi «Zvözdnii»-mikrorajonas (''Tähthasine'', 2017)
+Вокзал в городе Циолковский.jpg|Päraudtestancijan sauvuz (2020)
+</gallery>
 
 == Homaičendad ==
 <references />
 
 == Irdkosketused ==
-* [http://затоциолковский.рф/ ''«Ciolkovskii»-SATÜ:n'' tobmuden aluzkundoiden oficialine sait (''затоциолковский.рф'').] {{ref-ru}}
+* [http://admciol.amurobl.ru/ Ciolkovskijan lidnümbrikon tobmuden aluzkundoiden oficialine sait (''admciol.amurobl.ru'').] {{ref-ru}}
 {{Commons|Category:Tsiolkovsky, Amur Oblast}}
 
 {{Amuran agjan lidnad}}
