--- a/Ciolkovskii_(lidn).mw
+++ b/Ciolkovskii_(lidn).mw
@@ -9,7 +9,7 @@
  | Voz' = 2021
  | Pind = 60.6
  | Fail = Tsiolkovsky-cosmodrome-vostochny-july-2015-amur-oblast.jpg
- | Pämez' = Sergei Levickii<br />(kül'mku 2018—)
+ | Pämez' = Vitalii Brižatii<br />(heinku 2021—)
  | Telefonkod = +7-41643-xx-xxx
  | Avtokod = 28
  | Aigvö = [[UTC]]+9 (MSK+6)
@@ -34,6 +34,8 @@ Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 5 892 ristitud. Li
 
 [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] pühäpert' om olmas lidnas.
 
+Lidnan edeline pämez' om Sergei Levickii (kül'mku 2018 — keväz'ku 2021).
+
 == Galerei ==
 <gallery mode="packed" heights="125px">
 Бюст Ю.А. Гагарина.jpg|Muštnik [[Jurii Gagarin]]an oiktastuseks (2018)
@@ -46,7 +48,7 @@ Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 5 892 ristitud. Li
 <references />
 
 == Irdkosketused ==
-* [http://admciol.amurobl.ru/ Ciolkovskijan lidnümbrikon tobmuden aluzkundoiden oficialine sait (''admciol.amurobl.ru'').] {{ref-ru}}
+* [http://admciol.amurobl.ru/ «Ciolkovskii»-SATÜ:n tobmuden aluzkundoiden oficialine sait (''admciol.amurobl.ru'').] {{ref-ru}}
 {{Commons|Category:Tsiolkovsky, Amur Oblast}}
 
 {{Amuran agjan lidnad}}
