--- a/Ciolkovskii_(lidn).mw
+++ b/Ciolkovskii_(lidn).mw
@@ -32,7 +32,7 @@ SATÜ:n pind om 1181,65 km².
 == Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 5 892 ristitud. Lidnan tobj pala om sauvomas, 2018. vodele projektiruihe 25 tuhad eläjid.
 
-[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] pühäpert' om olmas lidnas.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalanmaman Kazanin jumalaižen puine pühäpert'<ref>[http://sobory.ru/geo/distr/3288 Ciolkovskijan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> om saudud lidnas vll 2011−2016.
 
 Lidnan edeline pämez' om Sergei Levickii (kül'mku 2018 — keväz'ku 2021).
 
