--- a/Tind.mw
+++ b/Tind.mw
@@ -5,8 +5,8 @@
  | Lidnanznam text = Tindan lidnanznam
  | Flag text = Tindan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 33,061
- | Voz' = 2018
+ | Eläjiden lugu = 32,894
+ | Voz' = 2021
  | Pind = 124
  | Fail = Tynda.jpg
  | Pämez' = Marina Mihailova<br />(sügüz'ku 2018—)
@@ -14,7 +14,7 @@
  | Avtokod = 28
  | Aigvö = [[UTC]]+9 (MSK+6)
 }}
-[[Fail:Tynda from right-bank.jpg|thumb|left|250px|Nägu lidnha.]]
+[[Fail:Tynda from right-bank.jpg|thumb|left|250px|Nägu lidnha]]
 '''Tind''' ({{lang-ru|Тында}}) om [[Venäma]]n lidn da lidnümbrik [[Amuran agj]]an lodehes. Se om [[Tindan rajon]]an administrativižeks keskuseks mugažo (ei mülü sihe), agjan nellänz' surtte lidn. Kuctas Tindad «[[Baikalan-Amuran magistral'|BAM:an]] pälidnaks».
 
 == Istorii ==
@@ -28,7 +28,18 @@ Lidn sijadase [[Tind (Gilüjan ližajogi)|ühtennimižen jogen]] randal ([[Amur]
 Tind om lidnümbrikon üks'jäine eländpunkt. Lidnfartaliden pind om 34 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 36 275 ristitud. Kaikiš suremb ristitišt oli 65 tuhad eläjid vl 1991. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Stroican päjumalanpert' om saudud vll 1994−2001.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 36 275 ristitud. Kaikiš suremb ristitišt oli 65 tuhad eläjid vl 1991.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Stroican päjumalanpert' om saudud vll 1994−2001.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Тында-2011 (04).JPG|Lidnan administracijan sauvuz (2009)
+Тында-2011 (11).JPG|Ph. Stroican päjumalanpert', vn 2009 (vai 2011) nägu
+Tynda rail.jpg|Tind-raudtestancii vl 2006
+Тында-2011 (16).JPG|Lidnan stadion (2009 vai 2011)
+Tynda train station in winter time, Amur region, Russia. December 2007.jpg|Tind-päraudtestancijan sauvuz vl 2007
+</gallery>
 
 == Irdkosketused ==
 * [http://gorod.tynda.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''gorod.tynda.ru'').] {{ref-ru}}
