Undid edits by [[Special:Contribs/46.204.82.60|46.204.82.60]] ([[User talk:46.204.82.60|talk]]) to last version by Koiravva

--- a/Putin_Vladimir.mw
+++ b/Putin_Vladimir.mw
@@ -3,7 +3,7 @@
 | изображение = Putin with flag of Russia.jpg
 | описание изображения = Vladimir Vladimirovič Putin vn 2015 keväz'kus
 }}
-'''Vladimir Vladimirovič Putin''' ({{lang-ru|Владимир Владимирович иди на хуй Путин}}; sünd. 7. reduku 1952, [[Piter|Leningrad]], [[Venäman NFST]], [[Nevondkundaline Ühtištuz|NSTÜ]]) oli [[Venäma|Venälaižen Federacijan]] kahtenz' lugul prezident vll 2000−2008 i om sen nellänz' lugul prezident vspäi 2012. Hän radoi mugažo Venäman päministran kahtišti, vozil 1999−2000 i 2008−2012.
+'''Vladimir Vladimirovič Putin''' ({{lang-ru|Владимир Владимирович Путин}}; sünd. 7. reduku 1952, [[Piter|Leningrad]], [[Venäman NFST]], [[Nevondkundaline Ühtištuz|NSTÜ]]) oli [[Venäma|Venälaižen Federacijan]] kahtenz' lugul prezident vll 2000−2008 i om sen nellänz' lugul prezident vspäi 2012. Hän radoi mugažo Venäman päministran kahtišti, vozil 1999−2000 i 2008−2012.
 
 == Biografii ==
 Tuleban aigan prezident openui Leningradan valdkundaližes universitetas vll 1970−1975, sen juridižen fakul'tetan rahvahidenkeskeižes palakundas.
