--- a/Blagoveščensk_(Amuran_agj).mw
+++ b/Blagoveščensk_(Amuran_agj).mw
@@ -1,41 +1,58 @@
 {{Eländpunkt
  | Nimi = Blagoveščensk<br />Благовещенск
- | Lidnanznam = Coat of Arms of Blagoveshchensk (Amur oblat).png
- | Flag = Flag of Blagoveschensk (Amur oblast).png
+ | Lidnanznam = Coat of arms of Blagoveshchensk 1878.svg
+ | Flag = Flag of Blagoveshchensk.svg
  | Lidnanznam text = Blagoveščenskan lidnanznam (Amuran agj)
  | Flag text = Blagoveščenskan flag (Amuran agj)
  | Valdkund = Venäma
- | Eläjiden lugu = 224,419
- | Voz' = 2017
+ | Eläjiden lugu = 225,757
+ | Voz' = 2021
  | Pind = 320.97
- | Fail = Улица Горького возле гостинницы АЗИЯ.JPG
- | Pämez' = [[Kalita Valentina|Valentina Kalita]] (2015—)
+ | Fail = Вики блг.png
+ | Pämez' = Oleg Imamejev<br />(heinku 2020—)
  | Telefonkod = +7-4162-xxx-xxx
  | Avtokod = 28
  | Aigvö = [[UTC]]+9 ([[MSK]]+6)
 }}
 {{Znamoičendad|Blagoveščensk}}
+[[Fail:Blagoveshchensk location map.png|thumb|left|250px|Lidnan kart ümbrištonke (2017)]]
 '''Blagoveščensk''' ({{lang-ru|Благовещенск}} [bləgɐˈvʲeɕːɪnsk]) om lidn da lidnümbrik [[Venäma]]n suvipäivnouzmas. Se om [[Amuran agj]]an administrativine keskuz da kaikiš suremb lidn.
 
 == Istorii ==
-Lidnan aluz om pandud vl 1856 ''Ust'-Zejan küläks'' ({{lang-ru|станица Усть-Зейская}}). Vl 1858 eländpunkt sai lidnan statusad da nügüdläšt nint, Blagoveščenjan jumalanpertin mödhe.
+Eländpunktan aluz om pandud ''Ust'-Zejan küläks'' ({{lang-ru|станица Усть-Зейская}}) vl 1856. Külä sai lidnan statusad nügüdläiženke nimitusenke vl 1858, Blagoveščenjan jumalanpertin mödhe.
 
-Vozil 1919 (keväz'ku) — 1920 (semendku) Blagoveščensk oli okkupiruidud Japonijan sodavägil.
+Vozil 1919 (keväz'ku) — 1920 (semendku) Blagoveščensk oli okkupiruidud [[Japonijan imperii|Japonijan imperijan]] sodavägil.
 
 == Geografijan andmused ==
-Lidn sijadase [[Amur (jogi)|Amur-jogen]] hural randal [[Zei (jogi)|Zei-jogen]] lanktendan sijas, 122 metrad keskmäižel korktusel valdmeren pindan päl. Amur-jogen leveduz om läz 800 metrad lidnan röunoiš. Kitajine [[Heihe]]-lidn seižub Amuran oiktal randal vasthapäi. Ei ole ühtenzoituzsildoid niiden keskes, vaiše ehtatim om.
+Lidn sijadase [[Amur (jogi)|Amur-jogen]] hural randal [[Zei (jogi)|Zei-jogen]] lanktendan sijas, 122 metrad keskmäižel korktusel valdmeren pindan päl. Amur-jogen leveduz om läz 800 metrad lidnan röunoiš. Kitajine [[Heihe]]-lidn seižub Amuran oiktal randal vasthapäi, kaikiš penemb keskust sihesai om 526 metrad. Avtotesild ühtenzoitab niid, se om saudud vll 2016−2019, no ekspluatacii ei ole zavodinus pandemijan tagut i planiruiše vn 2022 ezmäižes polespäi.
 
 Kaks' muite žilod, kaks' küläd da kaks' žilod raudtestancijanno mülüdas lidnümbrikho Blagoveščenskan ližaks.
 
 == Eläjad ==
-Vl 1913 lidnan ristitišt oli läz 80 tuhad. Vn 2010 kaiken Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 214 390 ristitud, lidnümbrikon — 219 847 ristitud. Lidnan i lidnümbrikon kaikiš suremb ristitišt om nügüd' (2015−2017 voded).
+Vl 1913 lidnan ristitišt oli läz 70 tuhad. Vn 2010 kaiken Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 214 390 ristitud, lidnümbrikon — 219 847 ristitud. Lidnan kaikiš suremb ristitišt oli 222 tuhad eläjid vl 2000 i 226 385 eläjad vl 2020. Vl 2018 lidnan ristitišt oli 225 091 eläjad, lidnümbrikon — 230 416 eläjad, agjan koume kümnendest.
+
+Edeline lidnan pämez' om Valentina Kalita (keväz'ku 2015 — heinku 2020).
 
 == Transport ==
-Rahvahidenkeskeine civiline ''Ignatjevo''-lendimport (''BQS / БГЩ'') sijadase 15 kilometras lodeheze lidnan keskusespäi.
+Rahvahidenkeskeine civiline ''Ignatjevo''-lendimport (''BQS / БГЩ'', 710 tuhad passažiroid vl 2021) sijadase 15 kilometras lodeheze lidnan keskusespäi.
 
 Avtobusad, trolleibusad da taksid oma kundaližeks transportaks lidnas. Ühtenzoituz Heihenke: laivad ujudas kezal, avtobusad ajadas tal'vel.
 
 Vspäi 1913 Blagoveščensk-raudtestancii om olmas. Raudte ühtenzoitab lidnad [[Belogorsk]]anke, se om 109 km pitte.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+布拉戈维申斯克市政府2017.jpg|Lidnan Duman i Administracijan sauvuz (2017)
+Амурский областной краеведческий музей.jpg|Amuran agjan kodirandantedištandmuzei (2012)
+布拉戈维申斯克——东正教堂2017.jpg|Jumalanmaman Blagoveššenjan päjumalanpert' (ortodoksine hristanuskond), vn 2017 nägu
+Гавриило-архангельский мужской монастырь Фото 1.JPG|Gavriil-arhangelan mez'jumalankodi (ortodoksine hristanuskond), vn 2013 nägu (ende riman katoline pühäpert')
+阿穆尔州百货商场2017.jpg|«Amurskaja jarmarka»-torguindkeskuz (2017, ''Amuran jarmank'')
+Амурский Государственный университет.JPG|Amuran valdkundaline universitet, päkorpus (2010)
+АмурскаяГМА.jpeg|Amuran valdkundaline medicinine akademii, administrativine korpus (2014)
+Улица Горького возле гостинницы АЗИЯ.JPG|«Azija»-adivpert' (''Azii'')
+Ignatyevo.JPG|Ignatjevo-lendimportan terminalad vl 2021
+Blagoveshchensk station.jpg|Blagoveščensk-raudtestancijan sauvuz vl 2012
+</gallery>
 
 == Homaičendad ==
 <references/>
