--- a/Blagoveščensk_(Amuran_agj).mw
+++ b/Blagoveščensk_(Amuran_agj).mw
@@ -31,6 +31,8 @@ Kaks' muite žilod, kaks' küläd da kaks' žilod raudtestancijanno mülüdas li
 == Eläjad ==
 Vl 1913 lidnan ristitišt oli läz 70 tuhad. Vn 2010 kaiken Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 214 390 ristitud, lidnümbrikon — 219 847 ristitud. Lidnan kaikiš suremb ristitišt oli 222 tuhad eläjid vl 2000 i 226 385 eläjad vl 2020. Vl 2018 lidnan ristitišt oli 225 091 eläjad, lidnümbrikon — 230 416 eläjad, agjan koume kümnendest.
 
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalanmaman Blagoveššenjan kafedraline päjumalanpert' (uz' om saudud vll 1997−2003), viž jumalanpertid i viž kodijumalanpertid oma olmas lidnas<ref>[http://sobory.ru/geo/locat/5564 Blagoveščenskan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref>, mugažo [[islam]]an pämečet' om saudud.
+
 Edeline lidnan pämez' om Valentina Kalita (keväz'ku 2015 — heinku 2020).
 
 == Transport ==
@@ -44,13 +46,13 @@ Vspäi 1913 Blagoveščensk-raudtestancii om olmas. Raudte ühtenzoitab lidnad [
 <gallery mode="packed" heights="125px">
 布拉戈维申斯克市政府2017.jpg|Lidnan Duman i Administracijan sauvuz (2017)
 Амурский областной краеведческий музей.jpg|Amuran agjan kodirandantedištandmuzei (2012)
-布拉戈维申斯克——东正教堂2017.jpg|Jumalanmaman Blagoveššenjan päjumalanpert' (ortodoksine hristanuskond), vn 2017 nägu
-Гавриило-архангельский мужской монастырь Фото 1.JPG|Gavriil-arhangelan mez'jumalankodi (ortodoksine hristanuskond), vn 2013 nägu (ende riman katoline pühäpert')
+布拉戈维申斯克——东正教堂2017.jpg|Jumalanmaman Blagoveššenjan kafedraline päjumalanpert', vn 2017 nägu
+Гавриило-архангельский мужской монастырь Фото 1.JPG|Gavriil-arhangelan jumalanpert', vn 2013 nägu (ende riman katoline pühäpert')
 阿穆尔州百货商场2017.jpg|«Amurskaja jarmarka»-torguindkeskuz (2017, ''Amuran jarmank'')
 Амурский Государственный университет.JPG|Amuran valdkundaline universitet, päkorpus (2010)
 АмурскаяГМА.jpeg|Amuran valdkundaline medicinine akademii, administrativine korpus (2014)
-Улица Горького возле гостинницы АЗИЯ.JPG|«Azija»-adivpert' (''Azii'')
-Ignatyevo.JPG|Ignatjevo-lendimportan terminalad vl 2021
+Улица Горького возле гостинницы АЗИЯ.JPG|«Azija»-adivpert' (2011, ''Azii'')
+Ignatyevo.JPG|Ignatjevo-lendimportan terminalad vl 2012
 Blagoveshchensk station.jpg|Blagoveščensk-raudtestancijan sauvuz vl 2012
 </gallery>
 
