Tün' tühjituz neitraližusen sättundan täht.

--- a/Ukrain.mw
+++ b/Ukrain.mw
@@ -6,9 +6,9 @@
 | Valdkundznam text = Ukrainan valdkundznam
 | Flag text = Ukrainan flag
 | Pälidn = Kijev
-| Eläjiden lugu = Krimanke — 43,952,299<ref name="ciaup">[https://www.cia.gov/library/publications/the-world-factbook/geos/up.html Ukrainan ristitišton endustuz vn 2018 heinkus // Mail'man faktoiden kirj. — ''Cia.gov''.] {{ref-en}}</ref>
+| Eläjiden lugu = Krimanke — 43,952,299<ref name="ciaup">[https://www.cia.gov/library/publications/the-world-factbook/geos/up.html Ukrainan ristitišton endustuz vn 2018 heinkus // Mail'man faktoiden kirj. — ''Cia.gov''.] {{ref-en}}</ref><br />Krimata — 41,601,898
 | Voz' = 2018
-| Pind = Krimanke — 603,550<ref name="ciaup"/>
+| Pind = Krimanke — 603,550<ref name="ciaup"/><br />Krimata — 576,628
 | Kart = Europe-Ukraine (disputed territory).svg
 | Kel' = [[ukrainan kel'|ukrainan]]
 | Valdkundan pämez' = [[Zelenskii Volodimir|Volodimir Zelenskii]]
