--- a/Etilspirt.mw
+++ b/Etilspirt.mw
@@ -2,9 +2,13 @@
 [[Fail:Ethanol-3D-vdW.png|thumb|right|250px|Etanolan molekulärine model']]
 '''Etilspirt''' vai '''etanol''' om üks'atomine [[spirt]]. [[Himine formul|Formul]] — C<sub>2</sub>H<sub>5</sub>OH.
 
-Häiktui, palab da ireg nozoluz. Jalos varuline elon täht, depressant. Kävutadas medicinas irdpol'žeks abutuseks. [[Alkogoližed jomad|Alkogoližiden jomiden]] tegimišton aluz. Ottas kävutamižhe [[poltuz|poltuseks]], segoitajaks, lämänmäričimiden täutmeks mugažo.
+Häiktui, palab da ireg nozoluz. Jalos varuline elon täht, toksine vähäižin kävutaden irdpolespäi, [[depressant]]. Kävutadas medicinas irdpol'žeks abutuseks. [[Alkogoližed jomad|Alkogoližiden jomiden]] tegimišton aluz. Ottas kävutamižhe [[poltuz|poltuseks]], segoitajaks, lämänmäričimiden täutmeks mugažo.
 
 Sadas kahtel tel päazjan: mikrobiologine i sintetine ([[etilen]]an gidratacii).
+
+== Ičendad ==
+* Lämuded: sulamine −114,3 C°, kehund +78,4 C°, süttutez +13 C°, ičtazsüttund +363 C°;
+* Poukahtuzmahtusen röunad il'mas: 3,28..18,95 %.
 
 == Homaičendad ==
 <references />
