--- a/Etilspirt.mw
+++ b/Etilspirt.mw
@@ -2,9 +2,9 @@
 [[Fail:Ethanol-3D-vdW.png|thumb|right|250px|Etanolan molekulärine model']]
 '''Etilspirt''' vai '''etanol''' om üks'atomine [[spirt]]. [[Himine formul|Formul]] — C<sub>2</sub>H<sub>5</sub>OH.
 
-Häiktui, palab da ireg nozoluz. Jalos varuline elon täht, toksine vähäižin kävutaden irdpolespäi, [[depressant]]. Kävutadas medicinas irdpol'žeks abutuseks. [[Alkogoližed jomad|Alkogoližiden jomiden]] tegimišton aluz. Ottas kävutamižhe [[poltuz|poltuseks]], segoitajaks, lämänmäričimiden täutmeks mugažo.
+Häiktui, palab da ireg nozoluz harakteriženke magunke i hajunke. Jalos varuline elon täht, toksine vähäižin kävutaden irdpolespäi, [[depressant]]. Kävutadas medicinas irdpol'žeks abutuseks. [[Alkogoližed jomad|Alkogoližiden jomiden]] tegimišton aluz. Ottas kävutamižhe [[poltuz|poltuseks]] ([[Amerikan Ühtenzoittud Valdkundad|AÜV]] i [[Brazilii]] tegiba mail'man nelläd videndest vl 2019), segoitajaks, lämänmäričimiden täutmeks mugažo.
 
-Sadas kahtel tel päazjan: mikrobiologine i sintetine ([[etilen]]an gidratacii).
+Sadas kahtel tel päazjan: mikrobiologine i sintetine ([[etilen]]an gidratacii). Ottas torhudeks villäd sömtegimištos, kävutadas poltusen samižen täht [[kukuruz|kukruzan]] seikhid i [[ris]]an ol'ged, [[mec]]tegimišton jändusid.
 
 == Ičendad ==
 * Lämuded: sulamine −114,3 C°, kehund +78,4 C°, süttutez +13 C°, ičtazsüttund +363 C°;
