--- a/Grekan_kel'.mw
+++ b/Grekan_kel'.mw
@@ -1,6 +1,9 @@
 {{1000}}{{A10000}}
+[[Fail:50 largest Greek diaspora.svg|Grekan kelen pagižijoiden leviganduz mail'man valdkundoidme (2006)]]
 [[Fail:Beginning Iliad.svg|thumb|right|250px|[[Iliad]]an augotiž]]
-'''Grekan kel'''' (ičeze nimitused: ''ελληνικά'' [ɛliniˈka], ''ελληνική γλώσσα'' [ɛliniˈki ˈɣlɔsa]) om üks' [[indoevropižed keled|indoevropižiš kelišpäi]]. Se om valdkundkel' [[Grekanma]]s i üks' kahtes valdkundkelespäi [[Kipr]]al. Pagižijoiden lugu om läz 25 millionad ristituid kaiked mail'madme. Kirjkel' om eriližen, [[grekan kirjamišt]]on pohjal.
+'''Grekan kel'''' (ičeze nimitused: ''ελληνικά'' [ɛliniˈka], ''ελληνική γλώσσα'' [ɛliniˈki ˈɣlɔsa]) om üks' [[indoevropižed keled|indoevropižiš kelišpäi]].
+
+Se kel' om üks'jäine valdkundkel' [[Grekanma]]s i üks' kahtes valdkundkelespäi [[Kipr]]al, [[Evropan Ühtištuz|EÜ:n]] üks' oficialižiš kelišpäi. Pagižijoiden lugu om läz 25 millionad ristituid kaiked mail'madme. Kirjkel' om eriližen, [[grekan kirjamišt]]on pohjal, sen tradicii lugeb 3,5 tuhad vozid.
 
 == Kacu mugažo ==
 * [[Grekan kirjamišt]]
