--- a/Grekan_kel'.mw
+++ b/Grekan_kel'.mw
@@ -5,7 +5,7 @@
 
 Se kel' om üks'jäine valdkundkel' [[Grekanma]]s i üks' kahtes valdkundkelespäi [[Kipr]]al, [[Evropan Ühtištuz|EÜ:n]] üks' oficialižiš kelišpäi. Sijaline regionaline status om [[Albanii|Albanijas]], [[Armenijan|Armenijas]] i [[Italii|Italijas]]. Pagižijoiden lugu om läz 25 millionad ristituid kaiked mail'madme, heišpäi 14 mln ristituiden mamankel'.
 
-Kirjkel' om eriližen, [[grekan kirjamišt]]on pohjal, sen tradicii lugeb 3,5 tuhad vozid. Kelen reguliruindorganizacii om Grekanman openduzministrusen Grekan kelen keskuz (grek. Κέντρο Ελληνικής Γλώσσας ''Kentro Ellinikis Glossas'') päfateranke [[Salonikad|Salonikiš]] i ofisanke [[Afinad|Afiniš]], keskuz om sätud vl 1994.
+Kirjkel' om eriližen, [[grekan kirjamišt]]on pohjal, sen tradicii lugeb 3,5 tuhad vozid. Kelen reguliruindorganizacii om Grekanman openduzministrusen Grekan kelen keskuz (grek. Κέντρο Ελληνικής Γλώσσας ''Kentro Ellinikis Glossas'') päfateranke [[Salonikid|Salonikiš]] i ofisanke [[Afinad|Afiniš]], keskuz om sätud vl 1994.
 
 == Kacu mugažo ==
 * [[Grekan kirjamišt]]
