*Empty MediaWiki Message*

--- a/Grekan_kel'.mw
+++ b/Grekan_kel'.mw
@@ -3,7 +3,7 @@
 [[Fail:Beginning Iliad.svg|thumb|right|250px|Tekstan ozutez — [[Iliad]]an augotiž]]
 '''Grekan kel'''' (ičeze nimitused: ''ελληνικά'' [ɛliniˈka], ''ελληνική γλώσσα'' [ɛliniˈki ˈɣlɔsa]) om üks' [[indoevropižed keled|indoevropižiš kelišpäi]].
 
-Se kel' om üks'jäine valdkundkel' [[Grekanma]]s i üks' kahtes valdkundkelespäi [[Kipr]]al, [[Evropan Ühtištuz|EÜ:n]] üks' oficialižiš kelišpäi. Sijaline regionaline status om [[Albanii|Albanijas]], [[Armenijan|Armenijas]] i [[Italii|Italijas]]. Pagižijoiden lugu om läz 25 millionad ristituid kaiked mail'madme, heišpäi 14 mln ristituiden mamankel'.
+Se kel' om üks'jäine valdkundkel' [[Grekanma]]s i üks' kahtes valdkundkelespäi [[Kipr]]al, [[Evropan Ühtištuz|EÜ:n]] üks' oficialižiš kelišpäi. Sijaline regionaline status om [[Albanii|Albanijas]], [[Armenii|Armenijas]] i [[Italii|Italijas]]. Pagižijoiden lugu om läz 25 millionad ristituid kaiked mail'madme, heišpäi 14 mln ristituiden mamankel'.
 
 Kirjkel' om eriližen, [[grekan kirjamišt]]on pohjal, sen tradicii lugeb 3,5 tuhad vozid. Kelen reguliruindorganizacii om Grekanman openduzministrusen Grekan kelen keskuz (grek. Κέντρο Ελληνικής Γλώσσας ''Kentro Ellinikis Glossas'') päfateranke [[Salonikid|Salonikiš]] i ofisanke [[Afinad|Afiniš]], keskuz om sätud vl 1994.
 
