--- a/Venäman_hogahtuz_Ukrainha_(2022).mw
+++ b/Venäman_hogahtuz_Ukrainha_(2022).mw
@@ -1,9 +1,9 @@
 [[Fail:Вторжение России на Украину.svg|thumbnail|right|250px|Venäman armijan sodategendoiden Ukrainan territorijas aktualine kart.
 ----
-<font color="red">rusked</font> — territorii Venäman armijan i "LDNR":an separatistoiden kontrolin al;<br><font color="darkgoldenrod">pakuine</font> — Ukrainan territorii (pro-)venämalaižen kontrolita;<br>''tomarad'' — (pro-)venämalaižen sodavägiden edenendoiden čuraduz;<br>💥 — iškendad Ukrainan eländpunktoihe]]
+<font color="red">rusked</font> — territorii Venäman armijan i «LDNR»:an separatistoiden kontrolin al;<br><font color="darkgoldenrod">pakuine</font> — Ukrainan territorii (pro-)venämalaižen kontrolita;<br>''tomarad'' — (pro-)venämalaižen sodavägiden edenendoiden čuraduz;<br>💥 — iškendad Ukrainan eländpunktoihe]]
 '''Venäman hogahtuz Ukrainha''', vai '''Venämalaiž-ukrainalaine {{abbr|soda|(voin)|0}}''' (oficialine nimi: '''Specialine sodaoperacii''', {{lang-ru|Специальная военная операция}}) om nügüdläine järed hogahtuz (sodaintervencii) [[Ukrain]]ha [[Venäma]]n laptaspäi, kudamb zavodihe voden [[2022]] [[24. uhoku|uhokun 24. päiväl]] aigoiš homendesel. Necen edes Venäma kogozi ičeze kontraktarmijan vägid plananmärižes lähen Ukrainan röunmad, a mugažo [[Putin Vladimir|Putin]]-prezident tundišti oficialižes [[Doneckan Rahvahaline Tazovaldkund|DNR:an]] da [[Luganskan Rahvahaline Tazovaldkund|LNR:an]] ripmatomut 21. päiväl uhokud.
 
-Päiškendod hogahtiba Ukrainan päivnouzmha, pohjoižhe ([[Vaugedvenäma]]n territorijaspäi [[Lukašenko Aleksandr|Aleksandr Lukašenko]]-prezidentan peitpaginan polhe) dai ehtbokha. Putin sanui, miše sodaintervencijan metod oma Ukrainan [[demilitarizacii]] i «denacifikacii».
+Päiškendad hogahtiba Ukrainan päivnouzmha, pohjoižhe ([[Vaugedvenäma]]n territorijaspäi [[Lukašenko Aleksandr|Aleksandr Lukašenko]]-prezidentan peitpaginan polhe) dai ehtbokha. Putin sanui, miše sodaintervencijan metod oma Ukrainan [[demilitarizacii]] i «denacifikacii».
 
 Ukrainan [[Zelenskii Volodimir|Vladimir Zelenskii]]-prezident tegi tedotust, miše Venäman sodategendoiden pämet om Ukrainan likvidiruind valdkundaks. Vägitungendan päiväl Ukrain rebiti diplomatižid kosketusid Venämanke, Zelenskii-prezident pani sodaolendad Ukrainan territorijal. Üleine mobilizacii om tedotadud Ukrainas 25. uhokud.
 
