--- a/Ueils_Džimmi.mw
+++ b/Ueils_Džimmi.mw
@@ -2,7 +2,14 @@
 | изображение = Jimmy Wales 706.jpg
 | описание изображения = Džimmi Ueils vn 2011 kül'mkus
 }}
-'''Džimmi Donal Ueils''' ({{lang-en|Jimmy Donal Wales}}, [[nikneim]] — '''Džimbo''' ({{lang-en|Jimbo}}); sünd. [[7. eloku]] [[1966]], [[Hantsvill (Alabam)]], [[Amerikan Ühtenzoittud Valdkundad|AÜV]]) om amerikalaine edheotai, [[Vikipedii|Vikipedijan]] alusenpanii, [[Vikimedii]]-fondan ezimez'.
+'''Džimmi Donal Ueils''' ({{lang-en|Jimmy Donal Wales}}, [[nikneim]] — '''Džimbo''' ({{lang-en|Jimbo}}); sünd. [[7. eloku]] [[1966]], [[Hantsvill (Alabam)]], [[Amerikan Ühtenzoittud Valdkundad|AÜV]]) om amerikaine edheotai.
+
+Mez' om [[Vikipedii|Vikipedijan]] alusenpanii, [[Vikimedii]]-fondan ezimez' (2003−2006 i vspäi 2011). [[Viki]]-koncepcijan ideolog, siš kaikutte saitan kävutai voib koheta i ližata südäiolendad. Vl 2019 sai [[Sur' Britanii|Suren Britanijan]] rahvahanikust hätkeližen radon tagut sen ohjastusen organas.
+
+== Biografii ==
+Džimmi om sündnu radnikoičijoiden kanzha. Hänen Džimmi Ueils-tat radoi menedžeraks söndtavaroiden laukas, Doris-mam pidi pen't privatišt ''House of Learning''-školad. Ueils-poig openui siš, hänele tuli mel'he lugeta enciklopedijoid enamba kaiked.
+
+Džimmi lopi vaumičendkolledžad i sai opendust Obernan universitetas, pästtihe bakalavran arvonke. Möhemba mez' openui [[Alabaman universitet]]as, radoi opendajan siš i [[Indianan universitet]]as. Vl 1994 Ueils sirdi [[Čikago]]ho, i vhesai 2000 radoi ''Chicago Options Associates''-kompanijas, siš torgui arvbumagoil i sai znamasižid rahoid.
 
 == Homaičendad ==
 <references/>
