--- a/Bagaman_Sariden_dollar.mw
+++ b/Bagaman_Sariden_dollar.mw
@@ -5,6 +5,8 @@
 
 Rahuziden nominalad oma 1, 5, 10, 15, 25 centad. Nened banknotad oma pörundas: 1, 5, 10, 20, 50 i 100 dollarad.
 
+Vn 2019 kül'mkus vozne infläcii oli 1,68 %.<ref>[http://www.centralbankbahamas.com/ Bagaman Sariden Keskuzbankan sait (''centralbankbahamas.com'').] {{ref-en}}</ref>
+
 == Homaičendad ==
 <references />
 
