--- a/Sel'kupan_kel'.mw
+++ b/Sel'kupan_kel'.mw
@@ -1,6 +1,17 @@
-'''Sel'kupan kel'''' (ičeze nimitused: ''шӧльӄумыт әты, чумыль ӄумыт әты, сӱccӱ ӄумыт әты, шӧш ӄумыт әты, тӱй ӄумыт әты'') om üks' [[samodižed keled|samodižiš kelišpäi]]. Se om üks'jäine eläb [[suvisamodižed keled|suvisamodine kel']]. Nenel kelel pagištas vaiše [[Venäma]]s: [[Jamalan Nenciden avtonomine ümbrik|Jamalan Nenciden avtonomižes ümbrikos]], [[Tomskan agj]]as da [[Krasnojarskan rand]]as.
+'''Sel'kupan kel'''' (ičeze nimitused: ''шӧльӄумыт әты, чумыль ӄумыт әты, сӱccӱ ӄумыт әты, шӧш ӄумыт әты, тӱй ӄумыт әты'') om [[sel'kupad|sel'kupoiden]] kel', üks' [[samodižed keled|samodižiš kelišpäi]]. Se om üks'jäine eläb [[suvisamodižed keled|suvisamodine kel']].
 
-Pagižijoiden lugu — läz 1000 ristitud (vn [[2010. voz'|2010]] [[Venäma]]n rahvahanlugemine).
+== Kävutand ==
+Necil kelel pagištas vaiše [[Venäma]]s: [[Jamalan Nenciden avtonomine ümbrik|Jamalan Nenciden avtonomižes ümbrikos]] i [[Tomskan agj]]as päpaloin, mugažo [[Krasnojarskan rand]]as.
+
+Pagižijoiden lugu — läz 1000 ristitud (1023 ristitud vn [[2010. voz'|2010]] [[Venäma]]n rahvahanlugemižen mödhe), rahvahan koume kümnendest. Toine kel' om [[venän kel']]. Nell' paginad: pohjoine, keskuzline, päivnouzmaine i suvine.
+
+== Istorii ==
+Edel 19. voz'sadad sel'kupan kel' oli rahvahidenkeskeižiden kosketusiden keleks tahondoiš [[Ob']]- i [[Jenisei]]-jogiden keskes nenil rahvahil: [[evenkalaižed]], [[hantalaižed]], [[ketalaižed]].
+
+Severz'-se kirjoid jumalanradnikoičendan täht om sätud 19. voz'sadal. Ezmäine oficialine kirjkel' om sätud [[latinine kirjamišt|latinical]] 1930-nzil vozil. Nügüdläine kirjkel' kävutase [[kirilline kirjamišt|kirilližen kirjamišton]] pohjal 1980-nziš vozišpäi.
+
+== Homaičendad ==
+<references />
 
 {{Venäman valdkundaližed keled}}
 
