--- a/Sel'kupan_kel'.mw
+++ b/Sel'kupan_kel'.mw
@@ -1,9 +1,9 @@
 '''Sel'kupan kel'''' (ičeze nimitused: ''шӧльӄумыт әты, чумыль ӄумыт әты, сӱccӱ ӄумыт әты, шӧш ӄумыт әты, тӱй ӄумыт әты'') om [[sel'kupad|sel'kupoiden]] kel', üks' [[samodižed keled|samodižiš kelišpäi]]. Se om üks'jäine eläb [[suvisamodižed keled|suvisamodine kel']].
 
 == Kävutand ==
-Necil kelel pagištas vaiše [[Venäma]]s: [[Jamalan Nenciden avtonomine ümbrik|Jamalan Nenciden avtonomižes ümbrikos]] i [[Tomskan agj]]as päpaloin, mugažo [[Krasnojarskan rand]]as.
+Necil kelel pagištas vaiše [[Venäma]]s: [[Jamalan Nenciden avtonomine ümbrik|Jamalan Nenciden avtonomižen ümbrikon]] suvipäivnouzmas i [[Tomskan agj]]as päpaloin, mugažo [[Krasnojarskan rand]]an keskuzpalan päivlaskmas.
 
-Pagižijoiden lugu — läz 1000 ristitud (1023 ristitud vn [[2010. voz'|2010]] [[Venäma]]n rahvahanlugemižen mödhe), rahvahan koume kümnendest. Toine kel' om [[venän kel']]. Nell' paginad: pohjoine, keskuzline, päivnouzmaine i suvine.
+Pagižijoiden lugu — läz 1000 ristitud (1023 ristitud vn [[2010. voz'|2010]] [[Venäma]]n rahvahanlugemižen mödhe), rahvahan koume kümnendest. Toine kel' om [[venän kel']]. Nell' paginad: pohjoine, keskuzline, päivnouzmaine i suvine. Rahvahan areal levitase jogirandoidme.
 
 == Istorii ==
 Edel 19. voz'sadad sel'kupan kel' oli rahvahidenkeskeižiden kosketusiden keleks tahondoiš [[Ob']]- i [[Jenisei]]-jogiden keskes nenil rahvahil: [[evenkalaižed]], [[hantalaižed]], [[ketalaižed]].
