*Empty MediaWiki Message*

--- a/Sel'kupan_kel'.mw
+++ b/Sel'kupan_kel'.mw
@@ -8,7 +8,7 @@ Pagižijoiden lugu — läz 1000 ristitud (1023 ristitud vn [[2010. voz'|2010]] 
 == Istorii ==
 Edel 19. voz'sadad sel'kupan kel' oli rahvahidenkeskeižiden kosketusiden keleks tahondoiš [[Ob']]- i [[Jenisei]]-jogiden keskes nenil rahvahil: [[evenkalaižed]], [[hantalaižed]], [[ketalaižed]].
 
-Severz'-se kirjoid jumalanradnikoičendan täht om sätud 19. voz'sadal. Ezmäine oficialine kirjkel' om sätud [[latinine kirjamišt|latinical]] 1930-nzil vozil. Nügüdläine kirjkel' kävutase [[kirilline kirjamišt|kirilližen kirjamišton]] pohjal 1980-nziš vozišpäi.
+Severz'-se kirjoid jumalanradnikoičendan täht om sätud 19. voz'sadal. Ezmäine oficialine kirjkel' om sätud [[latinan kirjamišt|latinical]] 1930-nzil vozil. Nügüdläine kirjkel' kävutase [[kirilline kirjamišt|kirilližen kirjamišton]] pohjal 1980-nziš vozišpäi.
 
 == Homaičendad ==
 <references />
