--- a/Sel'kupan_kel'.mw
+++ b/Sel'kupan_kel'.mw
@@ -6,9 +6,58 @@ Necil kelel pagištas vaiše [[Venäma]]s: [[Jamalan Nenciden avtonomine ümbrik
 Pagižijoiden lugu — läz 1000 ristitud (1023 ristitud vn [[2010. voz'|2010]] [[Venäma]]n rahvahanlugemižen mödhe), rahvahan koume kümnendest. Toine kel' om [[venän kel']]. Nell' paginad: pohjoine, keskuzline, päivnouzmaine i suvine. Rahvahan areal levitase jogirandoidme.
 
 == Istorii ==
-Edel 19. voz'sadad sel'kupan kel' oli rahvahidenkeskeižiden kosketusiden keleks tahondoiš [[Ob']]- i [[Jenisei]]-jogiden keskes nenil rahvahil: [[evenkalaižed]], [[hantalaižed]], [[ketalaižed]].
+Edel 19. voz'sadad sel'kupan kel' oli rahvahidenkeskeižiden kosketusiden keleks tahondoiš [[Ob']]- i [[Jenisei]]-jogiden keskes nenil rahvahil: [[evenkalaižed]], [[hantilaižed]], [[ketalaižed]].
 
-Severz'-se kirjoid jumalanradnikoičendan täht om sätud 19. voz'sadal. Ezmäine oficialine kirjkel' om sätud [[latinan kirjamišt|latinical]] 1930-nzil vozil. Nügüdläine kirjkel' kävutase [[kirilline kirjamišt|kirilližen kirjamišton]] pohjal 1980-nziš vozišpäi.
+Severz'-se kirjoid jumalanradnikoičendan täht om pästtud 19. voz'sadan lopus. Ezmäine oficialine kirjkel' om sätud [[latinan kirjamišt|latinical]] 1930-nzil vozil. Nügüdläine kirjkel' kävutase [[kirilline kirjamišt|kirilližen kirjamišton]] pohjal 1980-nziš vozišpäi.
+
+== Kirjamišt ==
+Sel'kupan kirjankelen kirjamišt tazan paginan alusel<ref>''А. И. Кузнецова и др.'' Селькупский язык (''Sel'kupan kel'''). — Piter, Prosveščenije, 2002. 395 lp. — Lpp. 14−15, 37. ISBN 5-09-005259-X.</ref>:
+{| class=standard cellpadding=5 style="font-size: 1.3em; line-height: 2.5em; text-align: center;"
+| style=«width:3em;» |А а
+| style=«width:3em;» |Ӓ ӓ
+| style=«width:3em;» |Б б
+| style=«width:3em;» |В в
+| style=«width:3em;» |Г г
+| style=«width:3em;» |Д д
+| style=«width:3em;» |Е е
+| style=«width:3em;» |Ә ә
+| style=«width:3em;» |Ё ё
+| style=«width:3em;» |Ж ж
+| style=«width:3em;» |З з
+|-
+| style=«width:3em;» |И и
+| style=«width:3em;» |І і
+| style=«width:3em;» |Й й
+| style=«width:3em;» |К к
+| style=«width:3em;» |Ӄ ӄ
+| style=«width:3em;» |Л л
+| style=«width:3em;» |М м
+| style=«width:3em;» |Н н
+| style=«width:3em;» |Ӈ ӈ
+| style=«width:3em;» |О о
+| style=«width:3em;» |Ө ө
+|-
+| style=«width:3em;» |Ӧ ӧ
+| style=«width:3em;» |П п
+| style=«width:3em;» |Р р
+| style=«width:3em;» |С с
+| style=«width:3em;» |Т т
+| style=«width:3em;» |У у
+| style=«width:3em;» |Ӱ ӱ
+| style=«width:3em;» |Ф ф
+| style=«width:3em;» |Х х
+| style=«width:3em;» |Ц ц
+| style=«width:3em;» |Ч ч
+|-
+| style=«width:3em;» |Ш ш
+| style=«width:3em;» |Щ щ
+| style=«width:3em;» |Ъ ъ
+| style=«width:3em;» |Ы ы
+| style=«width:3em;» |Ь ь
+| style=«width:3em;» |Э э
+| style=«width:3em;» |Ю ю
+| style=«width:3em;» |Я я
+|}
 
 == Homaičendad ==
 <references />
