*Empty MediaWiki Message*

--- a/Balei.mw
+++ b/Balei.mw
@@ -19,7 +19,7 @@
 == Istorii ==
 Ezmäižed mülünuded lidnha eländpunktad oliba tetabad 18. voz'sadaspäi kuti ''Kamenk'' ({{lang-ru|Каменка}}) i ''Novotroiskii pramozl-žilo'' ({{lang-ru|село Новотроицкий промысел}}) samha [[kuld]]ad. Vl 1938 ühtenzoittihe žilod lähižidenke koumenke külänke i stanicanke da anttihe lidnan statusad agjan alištusenke.
 
-Vll 1947−1953 kävutihe türmatud mehiden töid ümbriradamha ut sur'kulud löudmižsijad. Vl 1997 lopihe kuldan samišt, vl 2004 projektiruiškanzihe ut samišt. Vl 2008 ühtištuihe lidnümbrikod rajonanke.
+Vll 1947−1953 kävutihe türmatud mehiden töid ümbriradamha ut sur'kulud löudmižsijad. Vl 1997 lopihe kuldan samišt, vl 2004 projektiruiškanzihe ut samišt. Vl 2008 ühtištuihe lidnümbrikod rajonanke. Vl 2022 kuldan samine om lidnan elon aluz.
 
 == Geografijan andmused ==
 Lidn sijadase Und-jogen oiktal randal ({{lang-ru|Унда}}, [[Amur]]an bassein), Borščovočnii-mägisel'gan suvipautkidenno, 620 m ü.m.t. keskmäižel korktusel. Matkad [[Čit]]hasai om 222 km päivlaskmha orhal vai 337 km avtotedme. Lähembaižed lidnad oma [[Šilk (lidn)|Šilk]] 52 km lodeheze orhal vai 104 km avtotedme i [[Nerčinsk]] 44 km pohjoižhe orhal vai 71 km avtol.
